Fix null crash in regards to tracking compass blockpos Fixed integration GUI’s not having a title set Added vanilla difficulty and gamerule integration Updated SQLib library version Fixed items being stackable in lobby Schedule reset to when all players have respawned #14 Fix structure location in Manhunt worlds #5 Fixed corrupted chunks after some resets Fixed Unpause command not working after runner leave causing pause Fixed /coords command Disable damage or fall damage temporarily when game starts #13 Fix dimensional advancement triggering #18 Add /preferences and /settings command Disabled actions in during head start Add /duration command and show duration post-game Make some commands executable by console #17 Removed Ready items when Team Preset is not Free Select Add starting countdown #19 Fixed parkour not resetting and finishing Added Custom Particles preference Disabled damage for hunters while waiting for runner Fixed missing space in coords list minutes Refactor some settings and menus Add preference for automatic or manual compass Fixed Spawn Radius setting not applying correctly Delayed world resetting to avoid various bugs Start command only works when delayed world reset is ready