@@ -1,11 +1,17 @@
 package manhunt.mixin;
 
 import com.mojang.authlib.GameProfile;
+import manhunt.ManhuntMod;
+import manhunt.config.ManhuntConfig;
+import manhunt.game.GameEvents;
 import manhunt.game.GameState;
+import manhunt.game.ManhuntGame;
+import manhunt.game.ManhuntSettings;
 import net.minecraft.component.DataComponentTypes;
 import net.minecraft.component.type.LodestoneTrackerComponent;
 import net.minecraft.component.type.NbtComponent;
 import net.minecraft.enchantment.Enchantments;
+import net.minecraft.entity.Entity;
 import net.minecraft.entity.damage.DamageSource;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
@@ -32,14 +38,14 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.Optional;
 
-import static manhunt.ManhuntMod.*;
-import static manhunt.game.ManhuntGame.gameOver;
-
 @Mixin(ServerPlayerEntity.class)
 public abstract class ServerPlayerEntityMixin extends PlayerEntity {
     @Final
     @Shadow
     public MinecraftServer server;
+
+    @Shadow public abstract void attack(Entity target);
+
     @Unique
     private long lastDelay = System.currentTimeMillis();
     @Unique
@@ -55,17 +61,17 @@ public abstract class ServerPlayerEntityMixin extends PlayerEntity {
     private void tick(CallbackInfo ci) {
         count++;
         if (count == 39) {
-            if (slowDownManager.get(this.getUuid()) != 0) {
-                if (slowDownManager.get(this.getUuid()) >= 4) {
-                    slowDownManager.put(this.getUuid(), slowDownManager.get(this.getUuid()) - 4);
+            if (ManhuntSettings.slowDownManager.get(this.getUuid()) != 0) {
+                if (ManhuntSettings.slowDownManager.get(this.getUuid()) >= 4) {
+                    ManhuntSettings.slowDownManager.put(this.getUuid(), ManhuntSettings.slowDownManager.get(this.getUuid()) - 4);
                 } else {
-                    slowDownManager.put(this.getUuid(), 0);
+                    ManhuntSettings.slowDownManager.put(this.getUuid(), 0);
                 }
             }
             count = 0;
         }
 
-        if (state == GameState.PLAYING) {
+        if (ManhuntMod.gameState != GameState.PREGAME) {
             if (this.isTeamPlayer(this.getScoreboard().getTeam("hunters"))) {
                 if (!hasTracker((ServerPlayerEntity) (Object)this)) {
                     NbtCompound nbt = new NbtCompound();
@@ -75,18 +81,18 @@ public abstract class ServerPlayerEntityMixin extends PlayerEntity {
                     ItemStack stack = new ItemStack(Items.COMPASS);
                     stack.set(DataComponentTypes.ITEM_NAME, Text.translatable("item.manhunt.tracker"));
                     stack.set(DataComponentTypes.HIDE_TOOLTIP, Unit.INSTANCE);
-                    stack.set(DataComponentTypes.LODESTONE_TRACKER, new LodestoneTrackerComponent(Optional.of(GlobalPos.create(getOverworld().getRegistryKey(), new BlockPos(0, 0, 0))), false));
+                    stack.set(DataComponentTypes.LODESTONE_TRACKER, new LodestoneTrackerComponent(Optional.of(GlobalPos.create(ManhuntMod.overworld.getRegistryKey(), new BlockPos(0, 0, 0))), false));
                     stack.addEnchantment(server.getRegistryManager().getWrapperOrThrow(RegistryKeys.ENCHANTMENT).getOrThrow(Enchantments.VANISHING_CURSE), 1);
                     stack.set(DataComponentTypes.CUSTOM_DATA, NbtComponent.of(nbt));
 
                     this.giveItemStack(stack);
                 } else {
-                    if (config.isAutomaticCompass() && System.currentTimeMillis() - lastDelay > rate) {
+                    if (ManhuntConfig.config.isAutomaticCompass() && ManhuntSettings.automaticCompass.get(this.getUuid()) && System.currentTimeMillis() - lastDelay > rate) {
                         for (ItemStack stack : this.getInventory().main) {
                             if (stack.getItem().equals(Items.COMPASS) && stack.get(DataComponentTypes.CUSTOM_DATA) != null && stack.get(DataComponentTypes.CUSTOM_DATA).copyNbt().getBoolean("Tracker")) {
-                                if (!stack.get(DataComponentTypes.CUSTOM_DATA).copyNbt().contains("Name") && !allRunners.isEmpty()) {
+                                if (!stack.get(DataComponentTypes.CUSTOM_DATA).copyNbt().contains("Name") && !GameEvents.allRunners.isEmpty()) {
                                     NbtCompound nbt = stack.get(DataComponentTypes.CUSTOM_DATA).copyNbt();
-                                    nbt.putString("Name", allRunners.get(0).getName().getString());
+                                    nbt.putString("Name", GameEvents.allRunners.getFirst().getName().getString());
                                     stack.set(DataComponentTypes.CUSTOM_DATA, NbtComponent.of(nbt));
                                 }
 
@@ -116,32 +122,41 @@ public abstract class ServerPlayerEntityMixin extends PlayerEntity {
 
     @Inject(at = @At("HEAD"), method = "onDeath")
     private void onDeath(DamageSource source, CallbackInfo ci) {
-        if (this.isTeamPlayer(this.getScoreboard().getTeam("runners"))) {
-            if (server.getScoreboard().getTeam("runners").getPlayerList().size() == 1 && state == GameState.PLAYING) {
-                gameOver(server, true);
+        var scoreboard = server.getScoreboard();
+        var runnersTeam = scoreboard.getTeam("runners");
+        if (this.isTeamPlayer(runnersTeam)) {
+            if (runnersTeam.getPlayerList().size() == 1 && ManhuntMod.gameState == GameState.PLAYING) {
+                ManhuntGame.end(server, true);
             }
         }
     }
 
     @Inject(method = "shouldDamagePlayer", at = @At("HEAD"), cancellable = true)
     private void pvpMixin(PlayerEntity attacker, CallbackInfoReturnable<Boolean> ci) {
-        if (state == GameState.PREGAME || paused) {
+        if (ManhuntMod.gameState == GameState.PREGAME || GameEvents.paused) {
             ci.setReturnValue(false);
-        } else {
-            if (this.isTeamPlayer(attacker.getScoreboardTeam()) && config.getFriendlyFire() != 1) {
-                if (config.getFriendlyFire() == 2) {
-                    if (!friendlyFire.get(this.getUuid()) || !friendlyFire.get(attacker.getUuid())) {
+        } else if (ManhuntMod.gameState == GameState.PLAYING) {
+            if (this.isTeamPlayer(attacker.getScoreboardTeam())) {
+                if (ManhuntConfig.config.getFriendlyFire() != 1) {
+                    if (ManhuntConfig.config.getFriendlyFire() == 2) {
+                        if (!ManhuntSettings.friendlyFire.get(this.getUuid()) || !ManhuntSettings.friendlyFire.get(attacker.getUuid())) {
+                            ci.setReturnValue(false);
+                            attacker.sendMessage(Text.translatable("chat.manhunt.friendly_fire.per_player").formatted(Formatting.RED));
+                        }
+                    } else if (ManhuntConfig.config.getFriendlyFire() == 3) {
+                        attacker.sendMessage(Text.translatable("chat.manhunt.friendly_fire").formatted(Formatting.RED));
                         ci.setReturnValue(false);
-                        attacker.sendMessage(Text.translatable("chat.friendly_fire.per_player").formatted(Formatting.RED));
                     }
-                } else if (config.getFriendlyFire() == 3) {
-                    attacker.sendMessage(Text.translatable("chat.friendly_fire").formatted(Formatting.RED));
+                }
+            } else {
+                if (GameEvents.headStart && attacker.isTeamPlayer(this.getServer().getScoreboard().getTeam("runners"))) {
                     ci.setReturnValue(false);
                 }
             }
         }
     }
 
+    @Unique
     private void updateCompass(ServerPlayerEntity player, ItemStack stack, ServerPlayerEntity trackedPlayer) {
         NbtCompound thisTag = trackedPlayer.writeNbt(new NbtCompound());
         NbtList positions = thisTag.getList("Positions", 10);
@@ -157,11 +172,20 @@ public abstract class ServerPlayerEntityMixin extends PlayerEntity {
 
         int[] is = stack.get(DataComponentTypes.CUSTOM_DATA).copyNbt().getIntArray("LodestonePos");
 
-        BlockPos blockPos = new BlockPos(is[0], is[1], is[2]);
+        if (is != null) {
+            if (is.length >= 2) {
+                BlockPos blockPos = new BlockPos(is[0], is[1], is[2]);
 
-        stack.set(DataComponentTypes.LODESTONE_TRACKER, new LodestoneTrackerComponent(Optional.of(GlobalPos.create(this.getWorld().getRegistryKey(), blockPos)), false));
+                stack.set(DataComponentTypes.LODESTONE_TRACKER, new LodestoneTrackerComponent(
+                        Optional.of(
+                                GlobalPos.create(this.getWorld().getRegistryKey(), blockPos)
+                        ), false)
+                );
+            }
+        }
     }
 
+    @Unique
     private static boolean hasTracker(ServerPlayerEntity player) {
         boolean tracker = false;
         for (ItemStack stack : player.getInventory().main) {
